# dadaforest

./: .gitignore  .mise.toml  Dockerfile  README.md  dadaforest.sql  database.py  main.py  metadata_urls.py  models.py  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 3c3a1d2559b6_initial.py
catalog/: admin.py  models.py  urls.py  views.py
catalog/fixtures/: catalog.json  domains.json
catalog/management/commands/: load_fs_data.py
catalog/migrations/: 0001_added_search_term_model.py  0001_initial.py  0002_added_domain_model.py  0003_added_assets_and_keywords.py
catalog/templates/catalog/: asset_search_results.html  base.html
crawlers/: crawlers.py
dadaforest/: settings.py  urls.py
