[project]
name = "dadaforest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "arrow>=1.3.0",
    "bs4>=0.0.2",
    "lxml>=5.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.34",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cover>=3.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.6.4",
]
